[package]
name = "dstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["fs"] }
async-std = { version = "1.12", features = ["attributes", "tokio1"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.28"
